--- a/example-02-way-1.html
+++ b/example-02-way-1.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="example-01.html">Trang 1</a></li>
+            <li><a href="index.html">Trang 1</a></li>
             <li><a href="example-02-way-1.html">Trang 2 - Cách 1</a></li>
             <li><a href="example-02-way-2.html">Trang 2 - Cách 2</a></li>
         </ul>
