--- a/example-02-way-1.html
+++ b/example-02-way-1.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
 
-    <form action="register-process.html" method="post" onsubmit="return checkAllData()" autocomplete="on">
+    <form action="register-process.html" method="post" onsubmit="return false;" autocomplete="on">
         <table border="0" cellpadding="0" cellspacing="2" align="center">
             <tr>
                 <th colspan="2" class="header">Register new account</th>
